# glue-inspector

./: .pre-commit-config.yaml  README.md  exportsbom.py  generate-table.py  glue-vulns.md  pyproject.toml  requirements-glue-4.0.txt  requirements-glueetl-2.0.txt  requirements-glueetl-3.0.txt  requirements-glueetl-4.0.txt  requirements-pythonshell-3.6.txt  requirements-pythonshell-3.9-analytics.txt  requirements-pythonshell-3.9.txt  test.json  test1.py  test2.py
.github/: dependabot.yml
glue_inspector/inspector/: __init__.py  inspector.py
glue_inspector/support/: __init__.py  download.py  merge.py
output/: README.md  gen-markdown.sh  gen-readme.sh  glueetl-2.0.md  glueetl-3.0.md  glueetl-4.0.md  glueetl-5.0.md  markdown.tpl  pythonshell-3.6.md  pythonshell-3.9-analytics.md  pythonshell-3.9.md  requirements-glueetl-2.0.txt  requirements-glueetl-3.0.txt  requirements-glueetl-4.0.txt  requirements-glueetl-5.0.txt  requirements-pythonshell-3.6.txt  requirements-pythonshell-3.9-analytics.txt  requirements-pythonshell-3.9.txt
src/glue_inspector/: __main__.py
src/glue_inspector/inspector/: __init__.py  inspector.py
src/glue_inspector/report/: generate-table.py
src/glue_inspector/support/: __init__.py  download.py  requirements.py  sbom_generator.py  test_download.py  test_requirements.py
