[tool.poetry]
name = "glue-inspector"
version = "0.1.0"
description = ""
authors = ["Jacob Verhoeks <jjverhoeks@schubergphilis.com>"]
readme = "README.md"
packages = [{include = "glue_inspector"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
boto3 = "^1.34.8"
cyclonedx-bom = "3.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
