[tool.poetry]
name = "glue-inspector"
version = "0.1.0"
description = ""
authors = ["Jacob Verhoeks <jacob.verhoeks@gmail.com>"]
readme = "README.md"
packages = [{include = "glue_inspector"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
boto3 = "^1.34.8"
cyclonedx-bom = "3.11.7"



[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.bandit]
target = ["glue_inspector"]
exclude_dirs = ["tests"]
skips = ["B608"]

# Default tests only run on dev as that is where development happens
# See the pyproject.toml files in the acc/prod folders for additional Github action pytest configs
[tool.pytest.ini_options]
python_files = ["glue_inspector**//*_test.py"]
pythonpath = ["glue_inspector/"]
